--- a/config.json
+++ b/config.json
@@ -1,10 +1,10 @@
 {
-    "ownerNumber": ["6282274499424@s.whatsapp.net"],
-    "ownerName": "Rainbetmutxyz",
-    "instagram" : "https://instagram.com/rain4you_",
-    "botName": "Rainbetmutxyz` ",
-    "footer": "Rainbetmutxyz",
-    "sessionName": "Rainbetmutxyz",
+    "ownerNumber": ["628989190966@s.whatsapp.net"],
+    "ownerName": "Vlasheer",
+    "instagram" : "https://instagram.com/zuck",
+    "botName": "Vlasheer` ",
+    "footer": "Vlasheer",
+    "sessionName": "Vlasheer",
     "pathimg": "./media/Haruka.jpg",
     "BotKey": "V12",
     "auto_welcomeMsg": true,
